# Bomiot

./: .gitignore  README-gitee.md  README.en.md  README.md  README.zh-CN-github.md  README.zh-CN.md  README_CN.md  index.html  package-lock.json  package.json  pyproject.toml  quasar.config.js  requirements.txt  test.py  办公用品库.xlsx
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  SECURITY.md  SUPPORT.md  dependabot.yml  labels.yml  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  security_report.md
.github/workflows/: auto-assign.yml  backup.yml  ci.yml  codeql.yml  dependency-review.yml  docker.yml  labels.yml  performance.yml  pre-commit.yml  release-drafter.yml  stale.yml
backup/templates/: .gitignore  package.json  quasar.config.js
backup/templates/public/md/: test1.en.md  test1.zh-CN.md  test2.en.md  test2.zh-CN.md
backup/templates/src/boot/: axios.js  i18n.js  notify-defaults.js
backup/templates/src/components/: MenuLink.vue  TabList.vue
backup/templates/src/components/lang/: LangChoice.vue
backup/templates/src/components/table/: TableList.vue
backup/templates/src/i18n/: index.js
backup/templates/src/i18n/en-US/: index.js
backup/templates/src/i18n/zh-CN/: index.js
backup/templates/src/layouts/: MainLayout.vue
backup/templates/src/pages/: ErrorNotFound.vue  TableReader.vue
backup/templates/src/router/: routes.js
backup/templates/src/stores/: dark.js
bomiot/: __init__.py  __version__.py  bomiotconf.py  config.ini  settings.py
bomiot/cmd/: __init__.py  changeapps.py  cmd.py  copyfile.py  create.py  create_key.py  createapp.py  deploy.py  generate.py  init.py  initadmin.py  initpwd.py  killport.py  market.py  migrate.py  parse.py  plugins.py  project.py
bomiot/cmd/extends/: admin.py  apps.py  files.py  filter.py  models.py  urls.py
bomiot/cmd/file/: .gitignore  LICENSE  README.md  __version__.py  api.py  bomiotconf.py  example.py  locustfile.py  plugins_config.ini  project_config.ini  pyproject.toml  receiver.py  server.py  setup.ini  stoppid.py  supervisor.conf  test.py  uwsgi.ini  websocket.py
bomiot/cmd/file/fastapi_app/: main.py
bomiot/cmd/file/flask_app/: main.py
bomiot/server/: bomiotconf.ini  manage.py  workspace.ini
bomiot/server/core/: __init__.py  admin.py  apps.py  auth.py  client.py  field.py  files.py  filter.py  handler.py  jwt_auth.py  message.py  middlewares.py  models.py  my_exceptions.py  observer.py  page.py  permission.py  receiver.py  scheduler.py  serializers.py  server.py  server_monitor.py  signal.py  test.py  throttle.py  url_check.py  urls.py  utils.py  utils.pyi  views.py  websocket.py
bomiot/server/core/migrations/: 0001_initial.py  0002_api_asn_bar_bin_capital_cpu_customer_department_disk_and_more.py  0002_asn_bar_bin_cpu_customer_department_disk_dn_goods_and_more.py  0002_delete_pypi.py  0002_warehouse_team_supplier_stock_purchase_goods_dn_and_more.py  0003_api_project_asn_project_bar_project_bin_project_and_more.py  0003_asndetail_dndetail_stockbin_delete_api_asn_project_and_more.py
bomiot/server/function/: asn.py  asn_detail.py  bar.py  bin.py  capital.py  customer.py  dn.py  dn_detail.py  driver.py  fee.py  goods.py  purchase.py  stock.py  stock_bin.py  supplier.py
bomiot/server/language/: en-US.toml  zh-CN.toml
bomiot/server/media/: README.en-US.md  README.md  README.zh-CN.md  bomiotconf.en-US.md  bomiotconf.zh-CN.md  data.en-US.md  data.zh-CN.md  django.en-US.md  django.zh-CN.md  fastapi.en-US.md  fastapi.zh-CN.md  flask.en-US.md  flask.zh-CN.md  inscription.en-US.md  inscription.zh-CN.md  interaction.en-US.md  interaction.zh-CN.md  mysql.en-US.md  mysql.zh-CN.md  observer.en-US.md  observer.zh-CN.md  performance.en-US.md  performance.zh-CN.md  permission.en-US.md  permission.zh-CN.md  poetry.en-US.md  poetry.zh-CN.md  postgresql.en-US.md  postgresql.zh-CN.md  scheduler.en-US.md  scheduler.zh-CN.md  server.en-US.md  server.zh-CN.md  setup.en-US.md  setup.zh-CN.md  sqlite.en-US.md  sqlite.zh-CN.md  structure.en-US.md  structure.zh-CN.md  supervisor.en-US.md  (+3 more)
bomiot/server/server/: __init__.py  asgi.py  pkgcheck.py  settings.py  test.py  urls.py  views.py  wsgi.py
bomiot/templates/: .gitignore  README.md  index.html  jsconfig.json  package.json  quasar.config.js
bomiot/templates/src/boot/: axios.js  bus.js  notify-defaults.js  pinia.js
bomiot/templates/src/components/: MenuLink.vue  TabList.vue
bomiot/templates/src/components/api/: API.vue
bomiot/templates/src/components/dark/: DarkMode.vue
bomiot/templates/src/components/doc/: DocList.vue
bomiot/templates/src/components/echarts/: BarCharts.vue  LineCharts.vue  PieCharts.vue  StackedBar.vue  StackedLine.vue  TreeMap.vue
bomiot/templates/src/components/example/: ExampleList.vue
bomiot/templates/src/components/lang/: LangChoice.vue
bomiot/templates/src/css/: app.sass  app.scss
bomiot/templates/src/layouts/: MainLayout.vue
bomiot/templates/src/pages/: CPUReader.vue  DepartmentReader.vue  DiskReader.vue  DocCenter.vue  ExampleReader.vue  IndexPage.vue  MemoryReader.vue  NetworkReader.vue  PIDCharts.vue  PIDReader.vue  PyPiCharts.vue  PyPiReader.vue  ReadMe.vue  ServerEcharts.vue  TableReader.vue  TeamReader.vue  UploadCenter.vue  UserReader.vue
bomiot/templates/src/router/: index.js  routes.js
bomiot/templates/src/stores/: dark.js  expire.js  language.js  leftDrawer.js  mdDocs.js  menu.js  permission.js  project.js  rightDrawer.js  tab.js  token.js
src-cordova/: config.xml  package.json
src/boot/: axios.js  i18n.js
src/components/: MenuLink.vue  TabList.vue
src/components/discuss/: DiscussionPage.vue
src/components/lang/: LangChoice.vue
src/components/lottie/: 404.json
src/components/toc/: DocsToc.vue
src/i18n/: index.js
src/i18n/en/: index.js
src/i18n/zh-CN/: index.js
src/layouts/: MainLayout.vue
src/pages/: DocsReadMarkdownIt.vue  ErrorNotFound.vue  IndexPage.vue
src/router/: routes.js
src/stores/: appName.js  giscus.js  index.js  language.js  mdDocs.js  menu.js  token.js
xxx/media/: README.zh-CN.md
(+42 files in other folders)
