[tool.poetry]
name = "bomiot"
version = "0.1.26"
description = ""
authors = ["Bomiot <Singosgu@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Bomiot/Bomiot"
include = [
    "LICENSE"
]

classifiers = [
    # Trove classifiers - https://packaging.python.org/specifications/core-metadata/#metadata-classifier
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy'
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
django = "~4.2"
adrf = "~0.1"
furl = "~2.1.3"
django-cors-headers = "~4.4.0"
pyjwt = "~2.9.0"
django-filter = "~24.3"
djangorestframework-csv = "~3.0.2"
orjson = "~3.10.7"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bomiot = "bomiot.cmd:cmd"