[tool.poetry]
name = "bomiot"
version = "0.4.0"
description = "One workspace for you to do you python app"
authors = ["Bomiot <Singosgu@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Bomiot/Bomiot"
repository = "https://github.com/Bomiot/Bomiot"
keywords = ["Bomiot", "bomiot", "GreaterWMS"]
include = [
    "LICENSE"
]
exclude = [
]

classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy'
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
django = "~4.2.16"
furl = "~2.1.3"
django-cors-headers = "~4.4.0"
pyjwt = "~2.9.0"
django-filter = "~24.3"
djangorestframework-csv = "~3.0.2"
orjson = "~3.10.7"
toml = "~0.10.2"
djangorestframework = "~3.15.2"
django-apscheduler = "~0.7.0"
pandas = "~2.2.3"
daphne = "~4.1.2"
twisted = {extras = ["http2", "tls"], version = "~24.7.0"}

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bomiot = "bomiot.cmd:cmd"