[tool.poetry]
name = "bomiot"
version = "0.4.15"
description = "One workspace for you to do you python app"
authors = ["Bomiot <Singosgu@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Bomiot/Bomiot"
repository = "https://github.com/Bomiot/Bomiot"
keywords = ["Bomiot", "bomiot", "GreaterWMS"]
include = [
    "LICENSE"
]
exclude = [
]

classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy'
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
bomiot = ">=0.1.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"