[tool.poetry]
name = "bomiot"
version = "1.0.0"
description = "Powerful Distributed Document Management Framework & Full-Stack Development Platform"
authors = ["Bomiot <Singosgu@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/Bomiot/Bomiot"
repository = "https://github.com/Bomiot/Bomiot"
keywords = ["Bomiot", "bomiot"]
include = [
    "LICENSE"
]

exclude = [
]

classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: Implementation :: CPython',
    'Programming Language :: Python :: Implementation :: PyPy'
]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
bomiot = ">=1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bomiot = "bomiot.cmd:cmd"